--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -53,39 +53,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine(\"sqlite:///hawaii.sqlite\")\n",
-    "Base = automap_base()"
+    "engine = create_engine(\"sqlite:///hawaii.sqlite\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Administrator\\anaconda3\\lib\\site-packages\\sqlalchemy\\orm\\clsregistry.py:176: SAWarning: This declarative base already contains a class with the same class name and module name as sqlalchemy.ext.automap.measurement, and will be replaced in the string-lookup table.\n",
-      "  util.warn(\n",
-      "C:\\Users\\Administrator\\anaconda3\\lib\\site-packages\\sqlalchemy\\orm\\clsregistry.py:176: SAWarning: This declarative base already contains a class with the same class name and module name as sqlalchemy.ext.automap.station, and will be replaced in the string-lookup table.\n",
-      "  util.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# reflect an existing database into a new model\n",
-    "Base.prepare(engine, reflect=True)\n",
-    "# reflect the tables\n"
+    "Base = automap_base()\n",
+    "# reflect the tables\n",
+    "Base.prepare(engine, reflect=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +83,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,11 +106,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create our session (link) from Python to the DB\n"
+    "# Create our session (link) from Python to the DB\n",
+    "session = Session(engine)"
    ]
   },
   {
